--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,14 @@ num-derive = "0.4"
 num-traits = "0.2"
 serde = "1.0.193"
 serde_derive = "1.0.193"
-solana-account = "2.2.1"
-solana-client = "2.2.1"
+solana-account = ">=2.2"
+solana-client = ">=2.2"
 solana-config-interface = { path = "interface", version = "1.0.0" }
-solana-instruction = "2.2.1"
-solana-program = "2.2.1"
-solana-pubkey = "2.2.1"
-solana-sdk = "2.2.1"
-solana-sdk-ids = "2.2.1"
-solana-short-vec = "2.2.1"
+solana-instruction = ">=2.2"
+solana-program = ">=2.2"
+solana-pubkey = ">=2.2"
+solana-sdk = ">=2.2"
+solana-sdk-ids = ">=2.2"
+solana-short-vec = ">=2.2"
 solana-system-interface = "1.0.0"
 thiserror = "1.0.61"
